Refactor stream to list.